--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/components/AuctionGridTitleSection.tsx", "pages/auth/login.tsx", "pages/auth/login-with-code.js", "pages/auth/login-without-code.js", "pages/auth/passwordless-login.js", "pages/api/auth/[...nextauth].js"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "pages/components/AuctionGridTitleSection.tsx", "pages/auth/login.tsx", "pages/auth/login-with-code.js", "pages/auth/login-without-code.js", "pages/auth/passwordless-login.js", "pages/api/auth/[...nextauth].js", "components/onboarding/PersonalDetails.js"],
   "exclude": ["node_modules"]
 }
