--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
+    "antd": "^5.21.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
@@ -29,6 +30,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-lazyload": "^3.2.1",
+    "react-loader-spinner": "^6.1.6",
+    "react-spinners": "^0.14.1",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.8",
     "tailwindcss": "^3.4.10",
