--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "json-server": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -24,7 +25,7 @@
     "framer-motion": "^11.11.9",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-beta.1",
-    "next": "14.2.5",
+    "next": "^15.0.2",
     "next-auth": "^4.24.7",
     "next-plugin-antd-less": "^1.8.0",
     "rc-slider": "^11.1.5",
@@ -36,6 +37,7 @@
     "react-phone-input-2": "^2.15.1",
     "react-spinner-overlay": "^0.1.33",
     "react-spinners": "^0.14.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.8",
