--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
     "antd": "^5.21.4",
@@ -25,11 +29,15 @@
     "framer-motion": "^11.11.9",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-beta.1",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "next": "^15.0.2",
     "next-auth": "^4.24.7",
     "next-plugin-antd-less": "^1.8.0",
     "rc-slider": "^11.1.5",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
