--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "framer-motion": "^11.11.9",
     "jquery": "^3.7.1",
     "json-server": "^1.0.0-beta.1",
+    "lucide-react": "^0.456.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "next": "^15.0.2",
