--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -20,11 +22,14 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@headlessui/react": "^2.1.4",
     "@heroicons/react": "^2.1.5",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/material": "^6.1.7",
     "antd": "^5.21.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
     "date-fns": "^3.6.0",
+    "downshift": "^9.0.8",
     "fancybox": "^3.0.1",
     "framer-motion": "^11.11.9",
     "jquery": "^3.7.1",
@@ -35,6 +40,7 @@
     "next": "^15.0.2",
     "next-auth": "^4.24.7",
     "next-plugin-antd-less": "^1.8.0",
+    "next-transpile-modules": "^10.0.1",
     "rc-slider": "^11.1.5",
     "react": "^18",
     "react-big-calendar": "^1.15.0",
@@ -44,6 +50,8 @@
     "react-lazyload": "^3.2.1",
     "react-loader-spinner": "^6.1.6",
     "react-phone-input-2": "^2.15.1",
+    "react-select": "^5.8.3",
+    "react-select-async-paginate": "^0.7.6",
     "react-spinner-overlay": "^0.1.33",
     "react-spinners": "^0.14.1",
     "react-table": "^7.8.0",
@@ -55,10 +63,14 @@
     "zustand": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
     "@types/node": "^20.14.13",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18",
     "@types/react-lazyload": "^3.2.3",
+    "babel-loader": "^9.2.1",
     "globals": "^15.9.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
