--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "@heroicons/react": "^2.1.5",
     "@mui/icons-material": "^6.1.7",
     "@mui/material": "^6.1.7",
+    "@radix-ui/react-select": "^2.1.2",
     "antd": "^5.21.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
+    "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "downshift": "^9.0.8",
     "fancybox": "^3.0.1",
@@ -46,6 +48,7 @@
     "react-big-calendar": "^1.15.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-lazyload": "^3.2.1",
     "react-loader-spinner": "^6.1.6",
